fix(App.scss): fix header stretching bug in Firefox - remove table min-height property

--- a/src/App.scss
+++ b/src/App.scss
@@ -120,7 +120,6 @@ $cell-height: 80px;
   font-size: 12px;
   line-height: 1.1;
   min-width: $table-width;
-  min-height: $table-height;
   table-layout: fixed;
   max-width: $table-width;
   max-height: $table-height;
